--- a/public/css/site.css
+++ b/public/css/site.css
@@ -157,6 +157,15 @@ main {
   clear: both;
 }
 
+.register-submit {
+      margin-bottom: 15px;
+      float:right;
+}
+/*.registration-form-inputs {
+      padding-left: 2em;
+    padding-right: 2em;
+}*/
+
 .or {
     background: #d9d9d9;
     border-radius: 12px;
