--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,65 +1,20 @@
-/* Sticky footer styles
-http://getbootstrap.com/examples/sticky-footer-navbar/
--------------------------------------------------- */
-/*html {
-  position: relative;
-  min-height: 100%;
-}*/
-/*body {
-   Margin bottom by footer height 
-  margin-bottom: 60px;
-}*/
-/*.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-   Set the fixed height of the footer here 
-  height: 60px;
-   height: 10vh; 
-  background-color: #9C9C9C;
-}*/
 
 /* begin general styles for site */
 footer { 
-/*    background-color:#35324E; *//* dark purpley blue */
-    border-radius:4px;
-    margin-top: 0px;
+  border-radius:4px;
+  margin-top: 0px;
 }
 
 footer #footer-copyright {
-    /*color: #A79560;*/ /* beige */
-    text-align: center;     
-}
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-/*body > .container {
-  padding: 60px 15px 0;
-}
-.container .text-muted {
-  margin: 20px 0;
+  text-align: center;     
 }
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-code {
-  font-size: 80%;
-}
-*/
 /* overload of bootstrap style */
 .navbar {
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
     margin-bottom: 0px;
 }
-
-/*.navbar-text .navbar-right {
-    padding-right: 15px;
-}*/
 
 .kpi-bar {
     background-color: #222222;
@@ -78,32 +33,28 @@ code {
     float:right;
     color: #617992;
 }
-/*#wrap { background: gray; position: absolute; bottom: 20px; top: 20px; right: 100px; left: 100px }
-#wrap .content { height: 100% }*/
 
 main {
-/*    background-color: #50686A;*/
     border-radius: 4px;
     margin-top: .25em;
     margin-bottom: .25em;
 }
 
+/* SETTINGS VIEW */
+/* settings form section */
 .settings-form {
-    padding-left: 1em;
-    padding-right: 1em;
-/*    background-color: #BBE3D7;*/
-
-
-    margin-top: 1em;
-    margin-bottom: 1em;
-    border-radius: 4px;
+  padding-left: 1em;
+  padding-right: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border-radius: 4px;
 }
 
 .settings-form legend {
-      background: #35324F;
-    border-radius: 4px;
-    color: white;
-    padding-left: .25em;
+  background: #35324F;
+  border-radius: 4px;
+  color: white;
+  padding-left: .25em;
 }
 
 .settings-form span {
@@ -113,33 +64,31 @@ main {
 .settings-save-btn {
   margin-top:1em;
   margin-bottom:1em;
-/*  float:right;*/
 }
+
+/* settings info section */
 .settings-info {
-        /*height:500px;*/
-/*    background-color: #BBE3D7;*/
-    margin-top: 1em;
-    margin-bottom: 1em;
-    border-radius: 4px;
-    border: solid 1px;
-/*    padding-top: 1em;*/
-    padding-left: .25em;
-    padding-right: .25em;
-    padding-bottom: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  border-radius: 4px;
+  border: solid 1px;
+  padding-left: .25em;
+  padding-right: .25em;
+  padding-bottom: 1em;
 }
 
 .settings-info h3 {
   margin-top:0px;
 }
+
 .settings-info-defaulted {
-    font-style: italic;
+  font-style: italic;
 }
 
 .settings-info-takeout-img {
-    float:left;
-    border-radius: 4px;
-    padding: 0 .5em;
-
+  float:left;
+  border-radius: 4px;
+  padding: 0 .5em;
 }
 
 .settings-info-earth-img {
@@ -161,26 +110,20 @@ main {
 }
 
 .flash_message {
-    width:35%;
-    margin-right:auto;
-    margin-left:auto;
-    display:block;
-    text-align:center;
-    padding:5px;
-    border-radius: 5px;
-/*    position:fixed;
-    top:0;
-    left:0;*/
-    background-color:#D66100;
-    color:white;
+  width:35%;
+  margin-right:auto;
+  margin-left:auto;
+  display:block;
+  text-align:center;
+  padding:5px;
+  border-radius: 5px;
+  background-color:#D66100;
+  color:white;
 }
 
 
 /* 11.24.2015 */
-/*
-.form-control .email {
-  width:50%;
-}*/
+
 
 .login-form {
       width: 50%;
@@ -190,14 +133,13 @@ main {
 }
 
 .login-logo {
-      margin-left: auto;
+    margin-left: auto;
     margin-right: auto;
     display: block;
     padding-top: 1em;
     padding-bottom: 1em;
 }
 .login-heading {
-/*    font-weight: bold;*/
     font-size: 40px;
     line-height: 1em;
     text-align: center;
@@ -220,10 +162,6 @@ main {
       margin-bottom: 15px;
       float:right;
 }
-/*.registration-form-inputs {
-      padding-left: 2em;
-    padding-right: 2em;
-}*/
 
 .carton-reverse-img {
     background-image: url(/img/cartonReverse.svg);
@@ -231,8 +169,7 @@ main {
     background-size: 75%;
     background-repeat: no-repeat;
     margin-top: 2em;
-/* background: url(../img/cartonReverse.svg) no-repeat 2% 55%/48% auto;
-*/}
+}
 .peeps-img {
   background-image: url(/img/peeps.svg);
   height:100px;
@@ -245,6 +182,7 @@ main {
     margin-right: auto;
     width: 75%;
 }
+
 .registration-intro-button {
   float:right;
   margin-bottom: .5em;
